--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Reconvierteme",
   "lang": "es",
-  "short_name": "Reconversión Monetaria Venezolana",
+  "short_name": "Reconviertm",
   "theme_color": "#1976d2",
   "background_color": "transparent",
   "orientation": "portrait",
