--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets", "src/manifest.json"],
-            "styles": ["src/styles.css"],
+            "styles": ["node_modules/bulma/css/bulma.css","src/styles.css"],
             "scripts": []
           },
           "configurations": {
