--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/service-worker": "^6.0.3",
     "bulma": "^0.7.1",
     "core-js": "^2.5.4",
+    "flag-icon-css": "^3.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
