Feature: Primer Lanzamiento

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bulma": "^0.7.1",
     "core-js": "^2.5.4",
     "flag-icon-css": "^3.0.0",
+    "ng2-currency-mask": "^5.3.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
