--- a/package.json
+++ b/package.json
@@ -19,34 +19,34 @@
     "@angular/compiler": "^8.0.0",
     "@angular/core": "^8.0.0",
     "@angular/forms": "^8.0.0",
-    "@angular/http": "^6.0.3",
+    "@angular/http": "^6.1.10",
     "@angular/material": "8.0.0",
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/pwa": "^0.800.1",
+    "@angular/pwa": "^0.800.2",
     "@angular/router": "^8.0.0",
     "@angular/service-worker": "^8.0.0",
-    "bulma": "^0.7.1",
-    "core-js": "^2.5.4",
-    "flag-icon-css": "^3.0.0",
+    "bulma": "^0.7.5",
+    "core-js": "^2.6.9",
+    "flag-icon-css": "^3.3.0",
     "ng2-currency-mask": "^5.3.1",
     "rxjs": "^6.5.2",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.1",
-    "@angular/cli": "~8.0.1",
+    "@angular-devkit/build-angular": "^0.800.2",
+    "@angular/cli": "^8.0.2",
     "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "^8.0.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.12.0",
